web/assets/styles/components/_components.about.scss
/*------------------------------------*\
  #ABOUT
\*------------------------------------*/

.about {
    display: none;
    position: fixed;
    overflow: auto;
    padding: .8rem var(--body-p) 12rem;
    height: 100vh;
    max-height: 100vh;
    margin-top: -4rem;
    width: 100%;
    background-color: var(--bg-pink);
    backdrop-filter: blur(.4rem);
    -webkit-backdrop-filter: blur(.4rem);
    z-index: map-get($z-index, about);

    grid-template-columns: 1fr;

    .has-modal & {
        display: grid;
    }

    @supports (height: 100svh) {
        height: 100svh;
        max-height: 100svh;
    }

    @include respond-to(lg) {
        grid-template-columns: 1fr 1fr;
        gap: var(--size-400);
        margin-top: 0;
        padding: 2.2rem 8ch var(--body-p) var(--body-p);
    }
}

.about__close {
    cursor: pointer;
    position: absolute;
    top: .8rem;
    right: var(--body-p);
}

.about__statement {
    max-width: var(--measure);

    p:first-child:before {
        display: inline-flex;
        content: 'Agnes Müller\00a0';
        opacity: 0;
    }
}

.about__cv {
    summary {
        cursor: pointer;
        font-weight: bold;
        display: flex;
        column-gap: var(--size-200);

        &:after {
            content: "+";
            font-size: 1.2rem;
            font-weight: normal;
            margin-top: -0.25rem;
            border-radius: 50%;
        }
    }

    &[open] {
        summary:after {
            content: "-";
        }
    }
}

.about__right {
    margin-top: var(--size-600);

    @include respond-to('lg') {
        margin-top: 0;
    }
}

